# meshtastic_firmware

./: CMakeLists.txt  README.md  platformio.ini
.github/workflows/: build_esp32.yml  build_nrf52.yml  build_rpi2040.yml  build_stm32.yml  main_matrix.yml  test.yml
docs/software/: time-window.md
docs/software/features/: time-window-flow.md  time-window.md
scripts/: enable_time_window.py
src/cli/: TimeWindowCLI.cpp  TimeWindowCLI.h  command_time_window.cpp
src/mesh/: PacketQueue.h  PriorityPacketQueue.h  RadioInterface.cpp  RadioInterface.h  RadioInterfaceQueue.cpp  RadioInterfaceTime.cpp  TimeWindow.cpp  TimeWindow.h  time_window.proto
src/mesh/www/: index.html  queue-monitor.html  time-window.html
src/mesh/www/js/: queue-alerts.js  queue-export.js  queue-monitor.js  queue-reports.js  queue-visualizer.js  time-window-status.js
src/modules/: AdminModule.cpp
src/plugins/: TimeWindowPlugin.cpp  TimeWindowPlugin.h
test/: CMakeLists.txt  README.md  TESTING.md  allocation_pattern.h  analyze_trends.py  benchmark_time_window.cpp  heap_fragmentation.h  heap_guard.h  json_config.h  memory_leak_detector.h  memory_profile_time_window.cpp  memory_validator.h  memory_visualizer.h  memory_visualizer_components.h  memory_visualizer_interactive.h  meshtastic_test.h  perf_memory_visualization.cpp  report_template.html  requirements.txt  run_tests.py  setup_environment.py  stress_memory_visualization.cpp  test_common.h  test_compression_strategy.cpp  test_config.h  test_config.json  test_config_backup.h  test_config_compression.h  test_config_encryption.h  test_config_migration.h  test_config_presets.h  test_config_validation.h  test_example.cpp  test_log_analyzer.h  test_log_anomaly.h  test_log_correlation.h  test_logger.h  test_memory_visualization.cpp  test_metrics.h  test_metrics_export.h  (+6 more)
